# AICAN

./: .env.example  .gitignore  README.md  app-config.ts  package.json  pnpm-lock.yaml
agent/: .env.example  README.md  agent.py  livekit.toml  prompts.py  pyproject.toml  requirements.txt
app/: layout.tsx
components/: agent-audio-visualizer-bar.tsx  agent-audio-visualizer-grid.tsx  agent-audio-visualizer-radial.tsx  agent-chat-indicator.tsx  agent-control-bar.tsx  agent-track-control.tsx  agent-track-toggle.tsx
components/agents-ui/: agent-control-bar.tsx
components/ai-elements/: conversation.tsx  message.tsx
components/app/: chat-transcript.tsx  session-view.tsx  theme-toggle.tsx  tile-layout.tsx  welcome-view.tsx
components/ui/: button-group.tsx  button.tsx  select.tsx  separator.tsx  toggle.tsx  tooltip.tsx
styles/: globals.css
